# onceagain

./: .gitignore  CMakeLists.txt  onceagain.pro  resources.qrc
src/: CMakeLists.txt  Style.qml  action.cpp  action.h  common.py  kernel.cpp  kernel.h  main.cpp  mainwindow.cpp  mainwindow.h  script.cpp  script.h  scriptmodel.cpp  scriptmodel.h  scriptproxymodel.cpp  scriptproxymodel.h
src/actions/: addtocmake.py  addtocmakeaction.cpp  addtocmakeaction.h  addtocmakeaction.py  addtoqrcaction.cpp  addtoqrcaction.h  addtoqrcaction.py  createclass.py  createclassaction.cpp  createclassaction.h  createfileaction.cpp  createfileaction.h  createfolderaction.cpp  createfolderaction.h  openeditor.cpp  openeditor.h  openexplorer.cpp  openexplorer.h  pythonaction.cpp  pythonaction.h  removedirectory.cpp  removedirectory.h  removedirectory.py  removefileaction.cpp  removefileaction.h  runcommand.cpp  runcommand.h
src/actions/qml/: AddToCMake.qml  AddToQRC.qml  CreateClass.qml  CreateQObject.qml  CreateQSortFilterProxyModel.qml  CreateQWidget.qml  RemoveDirectory.qml
src/utils/: cmakeutils.cpp  cmakeutils.h  fileutils.cpp  fileutils.h  stringutils.cpp  stringutils.h
templates/cpp/: class.cpp  class.h
templates/qt/models/: QSortFilterProxyModel.cpp  QSortFilterProxyModel.h
